--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/Maher1506/JavaScript-event-booking#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2"
   },
