--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-  "name": "even-booking",
-  "version": "1.0.0",
-  "description": "This is an event booking system for booking sports, entertainment, and other types of events",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Maher1506/JavaScript-event-booking.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Maher1506/JavaScript-event-booking/issues"
-  },
-  "homepage": "https://github.com/Maher1506/JavaScript-event-booking#readme",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.7",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.15.0",
-    "mongoose": "^8.13.2",
-    "nodemailer": "^6.10.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "eslint": "^9.24.0",
-    "globals": "^16.0.0",
-    "nodemon": "^3.1.9"
-  }
+    "name": "even-booking",
+    "version": "1.0.0",
+    "description": "This is an event booking system for booking sports, entertainment, and other types of events",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon backend/server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Maher1506/JavaScript-event-booking.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Maher1506/JavaScript-event-booking/issues"
+    },
+    "homepage": "https://github.com/Maher1506/JavaScript-event-booking#readme",
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.7",
+        "dotenv": "^16.5.0",
+        "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongodb": "^6.15.0",
+        "mongoose": "^8.13.2",
+        "nodemailer": "^6.10.1"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.24.0",
+        "eslint": "^9.24.0",
+        "globals": "^16.0.0",
+        "nodemon": "^3.1.9"
+    }
 }
