--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+  
+    "react-toastify": "^11.0.5",
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -29,8 +31,6 @@
   }
 }
 
-{
-  "dependencies": {
-    "react-toastify": "^11.0.5"
-  }
-}
+
+  
+
