--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
   "github.copilot.enable": {
-    "*": true,
+    "*": false,
     "plaintext": false,
     "markdown": false,
-    "scminput": false
+    "scminput": false,
+    "javascript": false
   },
   "codeium.enableCodeLens": false,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
