--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,39 +1,40 @@
 {
-    "name": "backend",
-    "version": "1.0.0",
-    "description": "This is an event booking system for booking sports, entertainment, and other types of events",
-    "main": "server.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon backend/server.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Maher1506/JavaScript-event-booking.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/Maher1506/JavaScript-event-booking/issues"
-    },
-    "homepage": "https://github.com/Maher1506/JavaScript-event-booking#readme",
-    "dependencies": {
-        "bcrypt": "^5.1.1",
-        "cookie-parser": "^1.4.7",
-        "cors": "^2.8.5",
-        "dotenv": "^16.5.0",
-        "express": "^5.1.0",
-        "jsonwebtoken": "^9.0.2",
-        "mongodb": "^6.15.0",
-        "mongoose": "^8.13.2",
-        "multer": "^2.0.0",
-        "nodemailer": "^6.10.1"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.24.0",
-        "eslint": "^9.24.0",
-        "globals": "^16.0.0",
-        "nodemon": "^3.1.9"
-    }
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "This is an event booking system for booking sports, entertainment, and other types of events",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Maher1506/JavaScript-event-booking.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Maher1506/JavaScript-event-booking/issues"
+  },
+  "homepage": "https://github.com/Maher1506/JavaScript-event-booking#readme",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
+    "multer": "^2.0.0",
+    "nodemailer": "^6.10.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.24.0",
+    "eslint": "^9.24.0",
+    "globals": "^16.0.0",
+    "nodemon": "^3.1.9"
+  }
 }
